--- a/packages/emoji-mart-website/example-dynamic-width.html
+++ b/packages/emoji-mart-website/example-dynamic-width.html
@@ -12,8 +12,8 @@
       }
     </style>
     <script type="module">
-      import data from '@emoji-mart/data'
-      import { Picker } from 'emoji-mart'
+      import data from '@cinefy/emoji-mart-data'
+      import { Picker } from '@cinefy/emoji-mart'
 
       new Picker({
         parent: document.querySelector('#picker'),
