--- a/packages/emoji-mart-website/example-headless-search.html
+++ b/packages/emoji-mart-website/example-headless-search.html
@@ -11,8 +11,8 @@
 
   <block name="script">
     <script type="module">
-      import data from '@emoji-mart/data'
-      import { init, SearchIndex } from 'emoji-mart'
+      import data from '@cinefy/emoji-mart-data'
+      import { init, SearchIndex } from '@cinefy/emoji-mart'
 
       init({ data })
 
