--- a/packages/emoji-mart-website/examples.html
+++ b/packages/emoji-mart-website/examples.html
@@ -12,8 +12,8 @@
   </block>
   <block name="script">
     <script type="module">
-      import data from '@emoji-mart/data'
-      import { init } from 'emoji-mart'
+      import data from '@cinefy/emoji-mart-data'
+      import { init } from '@cinefy/emoji-mart'
 
       init({ data })
     </script>
