--- a/packages/emoji-mart-website/index.html
+++ b/packages/emoji-mart-website/index.html
@@ -182,8 +182,8 @@
       <img id="img-parrot" src="./assets/parrot.gif" />
     </div>
     <script type="module">
-      import data from '@emoji-mart/data'
-      import * as EmojiMart from 'emoji-mart'
+      import data from '@cinefy/emoji-mart-data'
+      import * as EmojiMart from '@cinefy/emoji-mart'
       window.EmojiMart = EmojiMart
 
       const reset = document.querySelector('#reset')
